infra/k8s/agent1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: agent-one-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: agent-one
    template:
        metadata:
            labels:
                app: agent-one
        spec:
            containers:
                - name: agent-one
                  image: kneonix/agent:latest
                  imagePullPolicy: Never
