infra/k8s/agent2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: agent-two-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: agent-two
    template:
        metadata:
            labels:
                app: agent-two
        spec:
            containers:
                - name: agent-two
                  image: kneonix/agent:latest
                  imagePullPolicy: Never
