infra/k8s/kafka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka-broker-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka-broker
    template:
        metadata:
            labels:
                app: kafka-broker
        spec:
            containers:
                - name: kafka-broker
                  image: confluentinc/cp-kafka:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
    name: kafka-broker-srv
spec:
    selector:
        app: kafka-broker
    ports:
        - name: kafka-broker
          protocol: TCP
          port: 9092
          targetPort: 9092
