infra/k8s/process-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: process-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: process
    template:
        metadata:
            labels:
                app: process
        spec:
            containers:
                - name: process
                  image: kneonix/process:latest
                  imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
    name: process-clusterip-srv
spec:
    selector:
        app: process
    ports:
        - name: process
          protocol: TCP
          port: 3000
          targetPort: 3000
