infra/k8s/proecss-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: process-redis-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: process-redis
    template:
        metadata:
            labels:
                app: process-redis
        spec:
            containers:
                - name: redis
                  image: redis:alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
    name: process-redis-srv
spec:
    selector:
        app: process-redis
    ports:
        - name: redis
          protocol: TCP
          port: 6379
          targetPort: 6379
