infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: ticketing.dev
          http:
              paths:
                  - path: /api/process/.*
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: process-clusterip-srv
                            port:
                                number: 3000
